controller and external tests added, and swagger reviewd
