# src/app.js
@@ -1,28 +1,20 @@
-import express from 'express';
-import connectDB from './config/db.js';
-import dotenv from 'dotenv';
-import swaggerUi from 'swagger-ui-express';
-import fs from 'fs';
-dotenv.config();
 
-connectDB();
-
+const express = require('express');
 const app = express();
 app.use(express.json());
 
-import authRoutes from './routes/auth.js';
-import movieRoutes from './routes/movies.js';
-import reviewRoutes from './routes/reviews.js';
+const userController = require('./controllers/userController');
+const mediaController = require('./controllers/mediaController');
 
-app.use('/api/auth', authRoutes);
-app.use('/api/movies', movieRoutes);
-app.use('/api/reviews', reviewRoutes);
-
-const swaggerDocument = JSON.parse(fs.readFileSync('./src/swagger/swagger.json', 'utf8'));
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger/swagger.json');
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+app.use('/users', userController);
+app.use('/', mediaController);
+
 app.get('/', (req, res) => {
-  res.send('Movie Rate API is running');
+  res.send('Media Rate API is running');
 });
 
-export default app;
+module.exports = app;
